# embedded

./: .gitignore
Final-Project/: CMakeLists.txt  duo_sdk_build.sh  subscriber.c
Final-Project/bmp280/: CMakeLists.txt  bmp280.html
Final-Project/lib/bmp280/: bmp280_i2c.h
Final-Project/lib/morse_lib/: CMakeLists.txt
Final-Project/morse/: CMakeLists.txt  blink.c  blink.h  delay.h
Final-Project/morse_lib/: CMakeLists.txt  delay.c  duo_sdk_build.sh  morse.c
Final-Project/ssd1306_linux/: CMakeLists.txt
morse-code-blink/: .gitignore  CMakeLists.txt  Makefile  milkv_duo.cmake  test_leds
morse-code-blink/duo-sdk/: version.txt
morse-code-blink/include/: definitions.h  params.h
morse-code-blink/lib/morse/: morse.c  morse.h
morse-code-blink/marcus_code/: blink.c  blink.h  delay.h  main.c  morse.c  morse.h
morse-code-blink/src/: main.c
morse-code-blink/test/: test.c  test.h  test_morse_code.c  test_morse_code.h
week2/: images.txt
week2/hello-world-cmake/: CMakeLists.txt  Dockerfile
week2/hello-world-makefile/: Dockerfile  Makefile  hello.c
week2/hello-world-python/: Dockerfile
week3/: .gitignore
week3/static-libraries/: CMakeLists.txt  Dockerfile  Makefile  README.md  dirs.tar  libs.tar  main.c
week3/static-libraries/lib_float_arithmatic/: Makefile
week3/static-libraries/lib_float_arithmatic/lib/: add_float.cpp  divide_float.cpp  float_arithmatic.h  multiply_float.cpp  subtract_float.cpp
week3/static-libraries/lib_float_arithmatic/src/: main.c
week3/static-libraries/lib_float_arithmetic/: CMakeLists.txt  Makefile  float_math
week3/static-libraries/lib_int_arithmatic/: CMakeLists.txt  My_Makefile
week3/static-libraries/lib_int_arithmatic/lib/: add_int.c  divide_int.c  multiply_int.c  subtract_int.c
week3/static-libraries/lib_int_arithmatic/src/: main.c
week3/static-libraries/lib_int_arithmetic/: CMakeLists.txt
week3/static-libraries/lib_int_arithmetic/lib/: multiply_int.c
week4/shared-libraries/: Dockerfile
week4/shared-libraries/lib_int_arithmetic/src/: main.c
week4/static-libraries/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  lib_math  libs.tar  main.c
week4/static-libraries/lib_float_arithmetic/lib/: extra_ops.cpp  float_arithmetic.h  subtract_float.cpp
week4/static-libraries/lib_float_arithmetic/src/: main.c
week4/static-libraries/lib_int_arithmetic/: Makefile  integer_math
week4/static-libraries/lib_int_arithmetic/lib/: add_int.c  divide_int.c  subtract_int.c
week4/toolchain/: hello.c  hello.out
week4/toolchain/assignment3/: CMake.dockerfile  instructions.txt  main.c
week4/toolchain/assignment3/double_arithmetic/: divide_double.cpp  double_arithmetic.h
week4/toolchain/assignment3/int_arithmetic/: add_int.c
week4/toolchain/riscv64-unknown-linux-musl/: build.log.bz2
week4/toolchain/riscv64-unknown-linux-musl/lib/bfd-plugins/: liblto_plugin
week4/toolchain/riscv64-unknown-linux-musl/lib/gcc/riscv64-unknown-linux-musl/13.2.0/install-tools/: mkheaders.conf
week4/toolchain/riscv64-unknown-linux-musl/libexec/gcc/riscv64-unknown-linux-musl/13.2.0/: collect2  g++-mapper-server  lto-wrapper
week4/toolchain/riscv64-unknown-linux-musl/libexec/gcc/riscv64-unknown-linux-musl/13.2.0/install-tools/: fixincl  mkheaders
week4/toolchain/riscv64-unknown-linux-musl/riscv64-unknown-linux-musl/debug-root/usr/include/: duma_config.h
week4/toolchain/riscv64-unknown-linux-musl/riscv64-unknown-linux-musl/debug-root/usr/lib/: libbfd.la  libctf-nobfd.la  libctf.la  libduma.so.0.0.0
week4/toolchain/riscv64-unknown-linux-musl/riscv64-unknown-linux-musl/include/c++/13.2.0/riscv64-unknown-linux-musl/bits/: c++config.h
week4/toolchain/riscv64-unknown-linux-musl/riscv64-unknown-linux-musl/lib/: libatomic.so.1  libatomic.so.1.2.0  libgcc_s.so.1  libitm.so.1  libitm.so.1.0.0  libitm.spec  libstdc++.so.6  libstdc++.so.6.0.32  libstdc++.so.6.0.32-gdb.py
week4/toolchain/riscv64-unknown-linux-musl/riscv64-unknown-linux-musl/lib/ldscripts/: elf32briscv.x  elf32briscv.xbn  elf32briscv.xc  elf32briscv.xce  elf32briscv.xdwe  elf32briscv.xse  elf32briscv.xswe  elf32briscv_ilp32.xd  elf32briscv_ilp32.xdc  elf32briscv_ilp32.xdce  elf32briscv_ilp32.xe  elf32briscv_ilp32f.xde  elf32briscv_ilp32f.xdw  elf32briscv_ilp32f.xn  elf32briscv_ilp32f.xs  elf32briscv_ilp32f.xsc  elf32briscv_ilp32f.xsce  elf32briscv_ilp32f.xsw  elf32briscv_ilp32f.xw  elf32briscv_ilp32f.xwe  elf32lriscv.x  elf32lriscv.xce  elf32lriscv.xd  elf32lriscv.xde  elf32lriscv.xs  elf32lriscv.xsc  elf32lriscv.xsw  elf32lriscv_ilp32.xbn  elf32lriscv_ilp32.xc  elf32lriscv_ilp32.xdc  elf32lriscv_ilp32.xdwe  elf32lriscv_ilp32.xe  elf32lriscv_ilp32.xse  elf32lriscv_ilp32.xw  elf32lriscv_ilp32.xwe  elf32lriscv_ilp32f.xdce  elf32lriscv_ilp32f.xdw  elf32lriscv_ilp32f.xn  elf32lriscv_ilp32f.xsce  elf32lriscv_ilp32f.xswe  (+120 more)
week4/toolchain/riscv64-unknown-linux-musl/riscv64-unknown-linux-musl/sysroot/lib/: libatomic.so.1.2.0  libgcc_s.so.1  libitm.so.1.0.0  libstdc++.so.6.0.32-gdb.py
week4/toolchain/riscv64-unknown-linux-musl/riscv64-unknown-linux-musl/sysroot/usr/include/: curses.h  expat_config.h  gmp.h  term.h
week4/toolchain/riscv64-unknown-linux-musl/riscv64-unknown-linux-musl/sysroot/usr/include/linux/: version.h
week4/toolchain/riscv64-unknown-linux-musl/riscv64-unknown-linux-musl/sysroot/usr/lib/: libexpat.so.1.8.10  libform.so.6.4  libmenu.so.6.4  libmpfr.la  libncurses.so.6.4  libpanel.so.6.4
week4/toolchain/riscv64-unknown-linux-musl/share/gdb/: gdbinit
week5/cross-compiling/: CMakeLists.txt  Dockerfile  Makefile  duo_sdk_build.sh  envsetup.sh  milkv_duo.cmake
week5/cross-compiling/double_arithmetic/: add_double.cpp
week5/cross-compiling/int_arithmetic/: divide_int.c  multiply_int.c
week6/cross-compiling/: CMakeLists.txt  entrypoint.sh  main.c
week6/cross-compiling/double_arithmetic/: multiply_double.cpp  subtract_double.cpp
week6/cross-compiling/int_arithmetic/: int_arithmetic.h  subtract_int.c
